slideshow fix color gaps, slide bug on mobile not failed to fix

--- a/public/scss/app_menu.scss
+++ b/public/scss/app_menu.scss
@@ -97,21 +97,16 @@
 }
 
 .slideshow {
-    background: #EEE;
+    background: vars.$app-menu-bg-color;
     height: 100%;
 }
 
 .slide {
-    // width: 66%;
-    // height: 200px;
+    background: vars.$app-menu-bg-color;
     width: 100%;
     height: 100%;
 
-    // margin-right: 10px;
-
-    background: vars.$app-menu-bg-color;
     counter-increment: slide;
-
 
     @extend %flexbox;
     justify-content: space-evenly;
@@ -137,7 +132,7 @@ position dots in carousel */
     opacity: 1 !important;
     background: vars.$page-dot-color !important;
     border: vars.$page-dot-border !important;
-    
+
     box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
 }
 /* fill-in selected dot */
